test/errors/python_generator_error/zs/scope_symbols/structure_field_names_clash_error.zs
package scope_symbols.structure_field_names_clash_error;

struct TestStruct
{
    uint32 some_field;
    float32 someField;
};
